syntax = "proto3";

package queue;

message RegisterWorkerRequest {
  string queue_name = 1;
  string worker_id = 2;
  string worker_address = 3; // The IP or URL for callbacks
}

message RegisterWorkerResponse {
  string status = 1;
  string message = 2;
}

service QueueService {
  rpc RegisterWorker (RegisterWorkerRequest) returns (RegisterWorkerResponse);
}
